# edullm-pacer

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/scripts/: EXPERIMENTS_README.md  build_benchmark.py  build_rater_excel.py  run_experiments.py  show_results.py
backend/src/edullm_pacer/: __init__.py  cli.py  config.py  pipeline.py  schemas.py
backend/src/edullm_pacer/api/: __init__.py  server.py
backend/src/edullm_pacer/api/static/: edullm_client.js  index.html
backend/src/edullm_pacer/benchmark/: __init__.py  bloom_tagger.py  dataset_builder.py  quality_filter.py  sqlite_exporter.py
backend/src/edullm_pacer/boundary/: __init__.py  detector.py  post_processor.py
backend/src/edullm_pacer/cas/: __init__.py  llm_calibrator.py  scorer.py
backend/src/edullm_pacer/chunkers/: __init__.py  base.py  educational.py  fixed.py  hybrid.py  recursive.py  registry.py  semantic.py
backend/src/edullm_pacer/classifier/: __init__.py  base.py  rule_based.py
backend/src/edullm_pacer/data/: __init__.py  build_manifest.py  ingest.py
backend/src/edullm_pacer/embeddings/: __init__.py  base.py  hash_embedder.py  sentence_transformer.py
backend/src/edullm_pacer/eval/: __init__.py  experiment_runner.py  retrieval_metrics.py
backend/src/edullm_pacer/experiments/: __init__.py  config.py  pacer_pipeline.py  results_analyzer.py  runner.py
backend/src/edullm_pacer/generation/: __init__.py  base.py  dummy.py  hf_local.py  prompt.py
backend/src/edullm_pacer/retrieval/: __init__.py  bm25_retriever.py  faiss_retriever.py  hybrid_retriever.py
backend/src/edullm_pacer/router/: __init__.py  base.py  rule_based.py
backend/src/edullm_pacer/utils/: __init__.py  io.py  logging.py  tracking.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_ingester.py  test_manifest_builder.py  test_pipeline_e2e.py  test_retrieval.py
backend/tests/unit/: test_benchmark.py  test_boundary.py  test_cas.py  test_classifier.py  test_educational_chunker.py  test_eval_metrics.py  test_experiments.py  test_fixed_chunker.py  test_recursive_chunker.py  test_router.py
data/processed/: benchmark.jsonl
docs/platform-guides/: ADD_ANSWERS_GUIDE.md  BACKEND_API_IMPLEMENTATION.md  CHROMADB_INTEGRATION_GUIDE.md  CHUNKING_GUIDE.md  COLAB_QUICK_FIX.md  COMPLETE_RAG_SYSTEM_IMPLEMENTATION.md  COMPREHENSIVE_STAT_CARDS_ANALYTICS.md  CONTRAST_FEATURE.md  CONTRAST_SUMMARY.md  CURRENT_STATUS_AND_NEXT_STEPS.md  (+75 more)
experiments/: run_experiment.py
frontend/: ab-testing-framework.js  analytics-dashboard.js  analytics.js  api-client.js  audit-trail.js  baseline-comparator.js  chart-visualization-manager.js  charts.css  check-rag-status.html  check-upload-history.html  chromadb-client.js  chromadb-setup-assistant.js  chunking-manager.js  clear-old-config.js  config-manager.js  config.js  contrast-manager.js  contrast.css  cross-subject-analyzer.js  curriculum-gap-analyzer.js  dashboard-enhanced.css  dashboard-features-test.html  dashboard-manager-old.js  dashboard-manager.js  data-collector.js  data-entry.html  data-processor.js  data-validator.js  database-init.js  database-management.css  database-management.html  database-management.js  database-v3-test.html  database-v3.js  database.js  dataset-versioner.js  debug-phase2.html  demo-rag.js  demo-workflow.js  diagnose-rag-issue.html  (+73 more)
scripts/: export_sqlite_to_pacer.py  migrate_to_monorepo.sh
(+7 files in other folders)
