[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edullm-pacer"
version = "0.1.0"
description = "Pedagogy-Aware Adaptive Chunking for RAG in Educational Language Models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nitesh Sharma", email = "nitesh.sharma@shoolini.edu" },
]
keywords = ["rag", "chunking", "education", "llm", "nlp", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.7.0,<4.0.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0 ; platform_system != 'Darwin'",
    "safetensors>=0.4.3",

    # Retrieval
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",

    # NLP utilities
    "spacy>=3.7.0",
    "nltk>=3.8.1",
    "tiktoken>=0.7.0",
    "langchain-text-splitters>=0.2.0",

    # Data handling
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "datasets>=2.19.0",

    # Evaluation
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "krippendorff>=0.6.1",

    # API / orchestration
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",

    # LLM clients
    "openai>=1.35.0",
    "anthropic>=0.28.0",
    "google-generativeai>=0.7.0",
    "groq>=0.9.0",

    # Experiment tracking
    "wandb>=0.17.0",

    # CLI / config
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",

    # Logging
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
]

[project.scripts]
edullm = "edullm_pacer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", "data", "experiments/results"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "B",         # bugbear
    "UP",        # pyupgrade
    "N",         # pep8-naming
    "SIM",       # simplify
    "RET",       # return
    "ARG",       # unused args
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow",
    "gpu: requires GPU",
    "integration: integration tests",
]
